--- a/memory.html
+++ b/memory.html
@@ -36,6 +36,6 @@
 			<div id="copyright"></div>
 		</footer>
 	</body>
-	<script src="js/main.js"></script>
+	<script src="js/memory.js"></script>
 	<script src="js/getYear.js"></script>
 </html>
