--- a/memory.html
+++ b/memory.html
@@ -28,6 +28,8 @@
 				<div class="col-md-2"></div>
 				<div class="col-md-8">
 					<div id="output"></div>
+					<div id="buttons"></div>
+					<div id="field"></div>
 				</div>
 				<div class="col-md-2"></div>
 			</div>			
