--- a/memory.html
+++ b/memory.html
@@ -12,7 +12,7 @@
 		
 		<!-- Custom styles for this template -->
 		<link href="css/custom.css" rel="stylesheet">
-		<link href="css/game.css" rel="stylesheet">
+		<link href="css/memory.css" rel="stylesheet">
 		
 		<!-- jQuery -->
 		<script src="js/jquery-2.1.0.min.js"></script>
