--- a/memory.html
+++ b/memory.html
@@ -28,7 +28,7 @@
 				<div class="col-md-2"></div>
 				<div class="col-md-8">
 					<div id="output"></div>
-					<div id="gameTab">Menu</div>
+					<div id="gameTab" alt="Memory game menu" title="Memory game menu">Menu</div>
 					<div id="menu">
 						<div id="message"></div>
 						<div id="buttons"></div>
