--- a/memory.html
+++ b/memory.html
@@ -28,8 +28,8 @@
 				<div class="col-md-2"></div>
 				<div class="col-md-8">
 					<div id="output"></div>
-					<div id="gameTab" alt="Memory game menu" title="Memory game menu">Menu</div>
-					<div id="menu">
+					<div id="inGameMenu" alt="Memory game menu" title="Memory game menu">Menu</div>
+					<div id="selectMenu">
 						<div id="message"></div>
 						<div id="buttons"></div>
 					</div>
