separated game field selection (buttonData) from options of reset or continue (menuData). This should take care of the issue with fieldSize losing it's value when the menu button is clicked and the option of continue is selected.

--- a/memory.html
+++ b/memory.html
@@ -51,8 +51,8 @@
 					<div class="col-md-6">
 						<div id="question">
 							<p>reset game or continue?</p>
-							<div class="cell" id="buttonReset" buttonData="reset">Reset</div>
-							<div class="cell" id="buttonContinue" buttonData="continue">Continue</div>
+							<div class="cell" id="menuReset" menuData="reset">Reset</div>
+							<div class="cell" id="menuContinue" menuData="continue">Continue</div>
 						</div>
 					</div>
 					<div class="col-md-2"></div>
