added .buttonRow class to the div that wraps the game field selectors.

--- a/memory.html
+++ b/memory.html
@@ -30,7 +30,7 @@
 				</div>
 				<div class="row">
 					<div class="table">
-						<div class="row">
+						<div class="row buttonRow">
 							<div class="col-md-1"></div>
 							<div class="col-md-2" id="button2x2" buttonData="2">2x2</div>
 							<div class="col-md-2" id="button3x3" buttonData="3">3x3</div>
