--- a/memory.html
+++ b/memory.html
@@ -50,9 +50,17 @@
 					</div>
 					<div class="col-md-6">
 						<div id="question">
-							<p>reset game or continue?</p>
-							<div class="cell" id="menuReset" menuData="reset">Reset</div>
-							<div class="cell" id="menuContinue" menuData="continue">Continue</div>
+							<div id="questionContainer">
+								<p>reset game or continue?</p>
+								<div class="table">
+									<div class="row buttonRow">
+										<div class="col-md-4"></div>
+										<div class="col-md-2" id="menuReset" menuData="reset">Reset</div>
+										<div class="col-md-2" id="menuContinue" menuData="continue">Continue</div>
+										<div class="col-md-4"></div>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 					<div class="col-md-2"></div>
