Replaced div#button elements with button elements and added .center-block to div#field.

--- a/memory.html
+++ b/memory.html
@@ -32,11 +32,15 @@
 					<div class="table">
 						<div class="row buttonRow">
 							<div class="col-md-1"></div>
-							<div class="col-md-2" id="button2x2" buttonData="2">2x2</div>
-							<div class="col-md-2" id="button3x3" buttonData="3">3x3</div>
-							<div class="col-md-2" id="button4x4" buttonData="4">4x4</div>
-							<div class="col-md-2" id="button5x5" buttonData="5">5x5</div>
-							<div class="col-md-2" id="button6x6" buttonData="6">6x6</div>
+							<div class="col-md-10 center-block">
+								<div class="btn-toolbar btn-group-lg" role="toolbar" aria-label="fieldSize">
+									<button id="button2x2" buttonData="2" type="button" class="btn btn-default">2x2</button>
+									<button id="button3x3" buttonData="3" type="button" class="btn btn-default">3x3</button>
+									<button id="button4x4" buttonData="4" type="button" class="btn btn-default">4x4</button>
+									<button id="button5x5" buttonData="5" type="button" class="btn btn-default">5x5</button>
+									<button id="button6x6" buttonData="6" type="button" class="btn btn-default">6x6</button>
+								</div>
+							</div>
 							<div class="col-md-1"></div>
 						</div>
 					</div>
@@ -71,7 +75,7 @@
 				<div class="row">
 					<div class="col-md-1"></div>
 					<div class="col-md-10">
-						<div id="field"></div>
+						<div id="field" class="center-block"></div>
 					</div>
 					<div class="col-md-1"></div>
 				</div>
