--- a/memory.html
+++ b/memory.html
@@ -52,16 +52,22 @@
 					<div class="col-md-2">
 						<div id="inGameMenu">Menu</div>
 					</div>
-					<div class="col-md-6">
+					<div class="col-md-8"></div>
+				</div>
+			</div>
+			<div class="table noBottomMargin">
+				<div class="row">
+					<div class="col-md-2"></div>
+					<div class="col-md-8">
 						<div id="question">
 							<div id="questionContainer">
 								<p>reset game or continue?</p>
 								<div class="table">
 									<div class="row buttonRow">
-										<div class="col-md-4"></div>
-										<div class="col-md-2" id="menuReset" menuData="reset">Reset</div>
-										<div class="col-md-2" id="menuContinue" menuData="continue">Continue</div>
-										<div class="col-md-4"></div>
+										<div class="btn-toolbar btn-group-lg" role="toolbar" aria-label="fieldSize">
+											<button id="menuReset" menuData="reset" type="button" class="btn btn-default">Reset</button>
+											<button id="menuContinue" menuData="continue" type="button" class="btn btn-default">Continue</button>
+										</div>
 									</div>
 								</div>
 							</div>
