--- a/memory.html
+++ b/memory.html
@@ -52,7 +52,13 @@
 					<div class="col-md-2">
 						<div id="inGameMenu">Menu</div>
 					</div>
-					<div class="col-md-8"></div>
+					<div class="col-md-4">
+						<div id="score">
+							<div id="gameScore"></div>
+							<div id="sessionScore"></div>
+						</div>
+					</div>
+					<div class="col-md-4"></div>
 				</div>
 			</div>
 			<div class="table noBottomMargin">
@@ -76,7 +82,6 @@
 					<div class="col-md-2"></div>
 				</div>
 			</div>
-			<div id="score"></div>
 			<div id="gameField" class="table">
 				<div class="row">
 					<div class="col-md-1"></div>
